Modify nav bar z index value to prevent the gif from overlapping it

--- a/watchedit/src/index.css
+++ b/watchedit/src/index.css
@@ -17,6 +17,7 @@ html, body {
   position: fixed;
   justify-content: space-between;
   align-items: center;
+  z-index: 100;
 }
 .title-container{
   position:absolute;
